--- a/build.yaml
+++ b/build.yaml
@@ -4,3 +4,5 @@ include:
   shield: MOKETA
   snippet: studio-rpc-usb-uart
   cmake-args: -DCONFIG_ZMK_STUDIO=y
+- board: nice_nano_v2
+  shield: settings_reset
