--- a/boards/shields/MOKETA/MOKETA.conf
+++ b/boards/shields/MOKETA/MOKETA.conf
@@ -24,3 +24,7 @@ CONFIG_LED=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=50
 
 CONFIG_ZMK_STUDIO_LOCKING=y
+
+# USB configuration
+CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
