--- a/build.yaml
+++ b/build.yaml
@@ -2,7 +2,9 @@
 include:
 - board: nice_nano_v2
   shield: MOKETA
-  snippet: studio-rpc-usb-uart
+  snippet: 
+  - studio-rpc-usb-uart
+  - zmk-usb-logging
   cmake-args: -DCONFIG_ZMK_STUDIO=y
 - board: nice_nano_v2
   shield: settings_reset
