--- a/build.yaml
+++ b/build.yaml
@@ -2,8 +2,7 @@
 include:
 - board: nice_nano_v2
   shield: MOKETA
-  # snippet:  studio-rpc-usb-uart
-  snippet:  zmk-usb-logging
-  # cmake-args: -DCONFIG_ZMK_STUDIO=y
+  snippet:  studio-rpc-usb-uart
+  cmake-args: -DCONFIG_ZMK_STUDIO=y
 - board: nice_nano_v2
   shield: settings_reset
